Changed quick search function. Refined Social Post alignment with col-lg to avoid overflowing text on neighbouring elements

--- a/journey-share-web/src/App.css
+++ b/journey-share-web/src/App.css
@@ -45,6 +45,10 @@ footer {
   text-align: center; 
 }
 
+.prepended-icons{
+  background-color: white;
+}
+
 #search-section {
   background-color: #6a806d;
   border: 1px gainsboro solid;
